added dynatrace configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ info.app.description=@project.description@
 info.app.version=@project.version@
 info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
+
+# DYNATRACE CONFIGS
+management.metrics.export.dynatrace.api-token=12345
+management.metrics.export.dynatrace.uri=http://localhost:9898
+management.metrics.export.dynatrace.device-id=${spring.application.name}
+management.metrics.export.dynatrace.group=redhat-pnc-monitoring-poc
+management.metrics.export.dynatrace.enabled=true
+management.metrics.export.dynatrace.step=1m
