--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,10 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-dynatrace</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
