added dynatrace configs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=prometheus-metrics
 
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,metrics,prometheus
-management.endpoint.shutdown.enabled=true
+management.endpoints.web.exposure.include=health,info,metrics,prometheus,dynatrace
+management.endpoint.shutdown.enabled=false
 management.endpoints.jmx.exposure.include=*
 management.endpoint.health.show-details=always
 management.metrics.tags.application=${spring.application.name}
@@ -19,5 +19,5 @@ management.metrics.export.dynatrace.api-token=12345
 management.metrics.export.dynatrace.uri=http://localhost:9898
 management.metrics.export.dynatrace.device-id=${spring.application.name}
 management.metrics.export.dynatrace.group=redhat-pnc-monitoring-poc
-management.metrics.export.dynatrace.enabled=true
+management.metrics.export.dynatrace.enabled=false
 management.metrics.export.dynatrace.step=1m
