--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,15 @@ management.endpoint.health.show-details=always
 management.metrics.tags.application=${spring.application.name}
 
 # INFO ENDPOINT CONFIGURATION
-info.app.name=@project.name@
-info.app.description=@project.description@
-info.app.version=@project.version@
-info.app.encoding=@project.build.sourceEncoding@
-info.app.java.version=@java.version@
+management.info.app.name=@project.name@
+management.info.app.description=@project.description@
+management.info.app.version=@project.version@
+management.info.app.encoding=@project.build.sourceEncoding@
+management.info.app.java.version=@java.version@
+management.info.git.mode=full
 
 # DYNATRACE CONFIGS
+
 management.metrics.export.dynatrace.api-token=12345
 management.metrics.export.dynatrace.uri=http://localhost:9898
 management.metrics.export.dynatrace.device-id=${spring.application.name}
