--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=prometheus-metrics
 
+management.metrics.enable.all=true
+
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,env,metrics,prometheus,dynatrace
+management.endpoints.web.exposure.include=health,info,env,metric,prometheus,dynatrace
 management.endpoint.shutdown.enabled=false
-management.endpoints.jmx.exposure.include=*
+management.endpoints.jmx.exposure.include='*'
 management.endpoint.health.show-details=always
 management.metrics.tags.application=${spring.application.name}
 
