added custom metrics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=prometheus-metrics
 management.metrics.enable.all=true
 
 #management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,env,metric,prometheus,dynatrace
+management.endpoints.web.exposure.include=health,info,env,metrics,prometheus
 management.endpoint.shutdown.enabled=false
 management.endpoints.jmx.exposure.include='*'
 management.endpoint.health.show-details=always
