--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,12 @@ management.info.app.java.version=@java.version@
 management.info.git.mode=full
 
 # DYNATRACE CONFIGS
-
 management.metrics.export.dynatrace.api-token=${DYNATRACE_API_TOKEN:12345}
-management.metrics.export.dynatrace.uri=${DYNATRACE_URI:http://localhost:9898}
+management.metrics.export.dynatrace.uri=${DYNATRACE_URI:https://jhu45378.live.dynatrace.com}
 management.metrics.export.dynatrace.device-id=${DYNATRACE_DEVICE_ID:prometheus-metrics}
 management.metrics.export.dynatrace.group=${DYNATRACE_GROUP:redhat-pnc-monitoring-poc}
 management.metrics.export.dynatrace.enabled=${DYNATRACE_ENABLED:true}
 #management.metrics.export.dynatrace.step=${DYNATRACE_STEP:30s}
 management.metrics.export.dynatrace.step=30s
+
+logging.level.root=INFO
