--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=dynatrace-metrics
+spring.application.profiles.active=default
 
 management.metrics.enable.all=true
 
-#management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.include=health,info,env,metrics,prometheus
+management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.include=*
 management.endpoint.shutdown.enabled=false
-management.endpoints.jmx.exposure.include='*'
 management.endpoint.health.show-details=always
 management.metrics.tags.application=${spring.application.name}
 
