--- a/k8s/hpa/hpa-memoryUtillization.yaml
+++ b/k8s/hpa/hpa-memoryUtillization.yaml
@@ -1,8 +1,7 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: dyna-hpa-jvm-live-threads-count
-  namespace: dynatrace-poc
+  name: dyna-hpa-memory-utilization
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -11,10 +10,9 @@ spec:
   minReplicas: 1
   maxReplicas: 10
   metrics:
-  - type: Pods
-    pods:
-      metric:
-        name: jvm_threads_live_threads
+  - type: Resource
+    resource:
+      name: memory
       target:
         type: AverageValue
-        averageValue: 15.0
+        averageValue: 100Mi
