--- a/k8s/hpa/hpa-memoryUtillization.yaml
+++ b/k8s/hpa/hpa-memoryUtillization.yaml
@@ -15,4 +15,9 @@ spec:
       name: memory
       target:
         type: AverageValue
-        averageValue: 100Mi
+        averageValue: 250Mi
+  behavior:
+    scaleUp:
+      stabilizationWindowSeconds: 300
+    scaleDown:
+      stabilizationWindowSeconds: 300
