--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=dynatrace-metrics
-spring.application.profiles.active=default
+spring.profiles.active=default
+spring.main.lazy-initialization=true
 
 management.metrics.enable.all=true
 
